--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/lourenzo/pkm-kit#readme",
   "devDependencies": {
     "jest": "^29.6.4",
+    "node-kernel": "^1.0.2",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
